tests/src/frontend/typechecking/invalid/positional_default_constructor.sk
class C(a: String = "", b: String)
